@@ -178,11 +178,11 @@ public class ExerciseSessionRecordTest {
                                 ExerciseSessionType.EXERCISE_SESSION_TYPE_FOOTBALL_AMERICAN)
                         .setRoute(route)
                         .build();
-        ExerciseSessionRecord testRecord = (ExerciseSessionRecord) TestUtils.insertRecord(record);
+        List<Record> recordList = TestUtils.insertRecords(Collections.singletonList(record));
 
         ReadRecordsRequestUsingIds.Builder<ExerciseSessionRecord> request =
                 new ReadRecordsRequestUsingIds.Builder<>(ExerciseSessionRecord.class);
-        request.addId(testRecord.getMetadata().getId());
+        request.addId(recordList.get(0).getMetadata().getId());
 
         ExerciseSessionRecord insertedRecord = TestUtils.readRecords(request.build()).get(0);
         assertThat(insertedRecord.hasRoute()).isTrue();
@@ -191,7 +191,7 @@ public class ExerciseSessionRecordTest {
         TestUtils.updateRecords(
                 Collections.singletonList(
                         getExerciseSessionRecord_update(
-                                record, testRecord.getMetadata().getId(), null)));
+                                record, recordList.get(0).getMetadata().getId(), null)));
 
         insertedRecord = TestUtils.readRecords(request.build()).get(0);
         assertThat(insertedRecord.hasRoute()).isFalse();
@@ -319,9 +319,19 @@ public class ExerciseSessionRecordTest {
                 .isEqualTo(defaultZoneOffset);
     }
 
-    public void testReadById_insertAndReadById_recordsAreEqual() throws InterruptedException {
+    @Test
+    public void testInsertRecord_apiReturnsRequestedRecords() throws InterruptedException {
         List<Record> records =
-                TestUtils.insertRecords(List.of(buildExerciseSession(), buildSessionMinimal()));
+                Arrays.asList(TestUtils.buildExerciseSession(), TestUtils.buildExerciseSession());
+        List<Record> insertedRecords = TestUtils.insertRecords(records);
+        assertThat(records.size()).isEqualTo(insertedRecords.size());
+        assertThat(records).containsExactlyElementsIn(insertedRecords);
+    }
+
+    @Test
+    public void testReadById_insertAndReadById_recordsAreEqual() throws InterruptedException {
+        List<Record> records = List.of(TestUtils.buildExerciseSession(), buildSessionMinimal());
+        TestUtils.insertRecords(records);
 
         ReadRecordsRequestUsingIds.Builder<ExerciseSessionRecord> request =
                 new ReadRecordsRequestUsingIds.Builder<>(ExerciseSessionRecord.class);
@@ -333,7 +343,8 @@ public class ExerciseSessionRecordTest {
 
     @Test
     public void testReadById_insertAndReadByIdOne_recordsAreEqual() throws InterruptedException {
-        List<Record> records = TestUtils.insertRecords(List.of(buildExerciseSession()));
+        List<Record> records = List.of(TestUtils.buildExerciseSession());
+        TestUtils.insertRecords(records);
 
         ReadRecordsRequestUsingIds.Builder<ExerciseSessionRecord> request =
                 new ReadRecordsRequestUsingIds.Builder<>(ExerciseSessionRecord.class);
@@ -351,8 +362,8 @@ public class ExerciseSessionRecordTest {
     @Test
     public void testReadByClientId_insertAndReadByClientId_recordsAreEqual()
             throws InterruptedException {
-        List<Record> records =
-                TestUtils.insertRecords(List.of(buildExerciseSession(), buildSessionMinimal()));
+        List<Record> records = List.of(TestUtils.buildExerciseSession(), buildSessionMinimal());
+        TestUtils.insertRecords(records);
 
         ReadRecordsRequestUsingIds.Builder<ExerciseSessionRecord> request =
                 new ReadRecordsRequestUsingIds.Builder<>(ExerciseSessionRecord.class);
@@ -365,9 +376,8 @@ public class ExerciseSessionRecordTest {
     @Test
     public void testReadByClientId_insertAndReadByDefaultFilter_filteredAll()
             throws InterruptedException {
-        List<Record> records =
-                TestUtils.insertRecords(List.of(buildExerciseSession(), buildSessionMinimal()));
-        assertThat(records).hasSize(2);
+        List<Record> records = List.of(TestUtils.buildExerciseSession(), buildSessionMinimal());
+        assertThat(TestUtils.insertRecords(records)).hasSize(2);
 
         List<ExerciseSessionRecord> readRecords =
                 TestUtils.readRecords(
@@ -379,8 +389,8 @@ public class ExerciseSessionRecordTest {
     @Test
     public void testReadByClientId_insertAndReadByTimeFilter_filteredCorrectly()
             throws InterruptedException {
-        List<Record> records =
-                TestUtils.insertRecords(List.of(buildExerciseSession(), buildSessionMinimal()));
+        List<Record> records = List.of(TestUtils.buildExerciseSession(), buildSessionMinimal());
+        TestUtils.insertRecords(records);
 
         TimeInstantRangeFilter filter =
                 new TimeInstantRangeFilter.Builder()
@@ -403,15 +413,15 @@ public class ExerciseSessionRecordTest {
     @Test
     public void testDeleteRecords_insertAndDeleteById_recordsNotFoundAnymore()
             throws InterruptedException {
-        List<Record> records =
-                TestUtils.insertRecords(List.of(buildExerciseSession(), buildSessionMinimal()));
+        List<Record> records = List.of(TestUtils.buildExerciseSession(), buildSessionMinimal());
+        List<Record> insertedRecords = TestUtils.insertRecords(records);
 
         TestUtils.assertRecordFound(
                 records.get(0).getMetadata().getId(), ExerciseSessionRecord.class);
         TestUtils.assertRecordFound(
                 records.get(1).getMetadata().getId(), ExerciseSessionRecord.class);
 
-        TestUtils.deleteRecords(records);
+        TestUtils.deleteRecords(insertedRecords);
 
         TestUtils.assertRecordNotFound(
                 records.get(0).getMetadata().getId(), ExerciseSessionRecord.class);
@@ -557,8 +567,8 @@ public class ExerciseSessionRecordTest {
         assertThat(response.getUpsertedRecords().size()).isEqualTo(0);
         assertThat(response.getDeletedLogs().size()).isEqualTo(0);
 
-        List<Record> testRecord =
-                TestUtils.insertRecords(Collections.singletonList(buildExerciseSession()));
+        List<Record> testRecord = Collections.singletonList(buildExerciseSession());
+        TestUtils.insertRecords(testRecord);
         response = TestUtils.getChangeLogs(changeLogsRequest);
         assertThat(response.getUpsertedRecords().size()).isEqualTo(1);
         assertThat(
